# gbnns_dim_red

./: README.md  data.py  naive_test.cpp  requirements.txt  search_function.h  support_func.py  train.py  train_naive_triplet.py  train_triplet.py
dim_red/: angular.py  data.py  support_func.py  triplet.py
results/: draw_results.ipynb
search/: CMakeLists.txt  cpu_only_test.cpp  final_test.cpp  naive_test.cpp  parameters_of_databases.txt  prepare_graph.cpp  search_function.h  search_function_torch.h  search_with_torch.cpp  simple_search.cpp  support_classes.h  support_func.h  visited_list_pool.h
wrap/: c_support.cpp  c_support.i  triplet_wrap.py  wrap_readme.md  wrap_readme.txt
